--- a/Notice.html
+++ b/Notice.html
@@ -102,9 +102,9 @@
                 <br>
                 <ul>
                     <li>내용<span>날짜</span></li>
-                    <li><a href="#">2021학년도 신입생 공지사항 [필독]</a><span>2021-02-28</span></li>           
-                    <li><a href="#">졸업생 초청 강연 - 해리 제임스 포터 </a><span>2021-01-24</span></li>
-                    <li><a href="#">기숙사 배정 관련 공지사항</a><span>2021-01-13</span></li>
+                    <li><a href="http://dltk456.dothome.co.kr//Hogwarts/preparationForFreshmen.html">2021학년도 신입생 준비물 [필독]</a><span>2021-02-28</span></li>           
+                    <li><a href="http://dltk456.dothome.co.kr//Hogwarts/invitationLectureForGraduates.html">졸업생 초청 강연 - 해리 제임스 포터 </a><span>2021-01-24</span></li>
+                    <li><a href="http://dltk456.dothome.co.kr//Hogwarts/dormitoryAssignment.html">기숙사 배정 관련 공지사항</a><span>2021-01-13</span></li>
                     <li><a href="#">신입생 오리엔테이션 자료</a><span>2021-01-08</span></li>
                     <li><a href="#">신입생 멘토링 프로그램 멘토 모집</a><span>2020-12-24</span></li>
                     <li><a href="#">퀴디치 선수 모집</a><span>2021-11-18</span></li>
