--- a/Notice.html
+++ b/Notice.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> <!--http://bonozoa.dothome.co.kr/HogwartsSchool.css-->
         <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
         <style>
+            /*마우스커서*/
+            * {cursor: url(https://cur.cursors-4u.net/user/use-1/use160.cur), auto !important;} 
+            
             main a { color: rgba(255, 248, 220, 0.651);}
             body {
                     background-color: rgb(75, 73, 71);
