--- a/Class.html
+++ b/Class.html
@@ -82,7 +82,7 @@
             <h1>수업 소개</h1> 
             <div class=subjectTitle id="commonSubject">1~5학년 공통과정</div>
                 <div class="card">
-                    <img src="비행술3.jpg">
+                    <img src="flights.jpg">
                     <h2>비행술(Flights)</h2>
                     <p>후치 부인(Madame Hooch)</p>
                     <p>1학년 때만 배우는 과목으로 야외 수업으로 이루어져 있다.</p>
@@ -151,8 +151,8 @@
                 <div class="card">
                     <img src="신비한 동물 돌보기.jpg">
                     <h2>신비한 동물 돌보기<br>(Care of Magical Creatures)</h2>
-                    <p>실바너스 캐틀번(Silvanus Kettleburn), 루베우스 해그리드(Rubeus Hagrid), 빌헬미나 그루블리플랭크(Wilhelmina Grubbly-Plank)</p>
-                    <p>여러가지 신비한 마법 생물들에 대해 배우고 이들을 다루고 돌보는 방법을 실습하는 과목이다. <br>이 교과목의 교과서인 신비한 동물 사전의 저자가 바로 뉴트 스캐맨더이다. 수업 특성상 야외수업이 되는 경우가 많은 편.</p>
+                    <p>실바너스 캐틀번, 루베우스 해그리드, 빌헬미나 그루블리플랭크(Wilhelmina Grubbly-Plank)</p>
+                    <p>여러가지 마법 생물들에 대해 배우고 이들을 다루고 돌보는 방법을 실습하는 과목. 수업 특성상 야외수업이 많은 편.</p>.
                 </div>
                 <div class="card">
                     <img src="점술.jpg">
@@ -173,7 +173,7 @@
                     <p>호그와트 5학년생들이 응시하는 시험. 마법 정부의 마법 시험 관리국 주관 하에 치러짐. 이 성적에 따라 향후 수업을 계속 들을 수 '있는지 없는지'를 가려내며, 직업 선택에 있어서도 중요하다. 대부분의 시험은 필기와 실기로 나눠지며 2주 동안 오전에는 이론, 오후에는 실기, 천문학 실기는 야간에 실시한다.</p>
                 </div>
                 <div class="card">
-                    <img src="고난도 마법사 시험.PNG">
+                    <img src="고난도 마법사 시험.jpg">
                     <h2>고난도 마법사 시험(N.E.W.T.)</h2>
                     <p>호그와트 졸업학년인 7학년때 치르는 시험으로 O.W.L.의 상위 레벨 시험. 학력에 관한 부분 뿐만 아니라 실제 직업에서 활용되는 능력, 즉, 마법을 직접적으로 테스트한다는 점에서 더욱 중요한 시험.</p>
                 </div>
