--- a/footer.html
+++ b/footer.html
@@ -59,13 +59,13 @@
 				<a>COPYRIGHT© 2021 HOGWARTS SCHOOL. ALL RIGHTS RESERVED.</a>
 			</div>
 			<div class="last-img">
-				<img src="http://shinheejin.dothome.co.kr/images/social/facebook.jpg" />
-		
-				<img src="http://shinheejin.dothome.co.kr/images/social/twitter.jpg"/>
-		
-				<img src="http://shinheejin.dothome.co.kr/images/social/instagram.jpg"/>
-		
-				<img src="http://shinheejin.dothome.co.kr/images/social/linkedin.jpg"/>
+			    <a href="https://m.facebook.com/HogwartsLegacy/" target="_blank"><img src="http://shinheejin.dothome.co.kr/images/social/facebook.jpg" /></a>
+
+			    <a href="https://twitter.com/HogwartsLegacy" target="_blank"><img src="http://shinheejin.dothome.co.kr/images/social/twitter.jpg"/></a>
+
+			    <a href="https://www.instagram.com/hogwartslegacy/?hl=ko" target="_blank"><img src="http://shinheejin.dothome.co.kr/images/social/instagram.jpg"/></a>
+
+			    <a href="https://kr.linkedin.com/" target="_blank"><img src="http://shinheejin.dothome.co.kr/images/social/linkedin.jpg"/></a>
 			</div>
 		</div>
 	</div>
