--- a/Class.html
+++ b/Class.html
@@ -75,7 +75,7 @@
                     </ul>
                 </nav>
                 </div>
-                <div class="visual"><img src="http://bonozoa.dothome.co.kr/show4.png" alt=""></div><!--show뒤에 숫자 각자 파트에 맞춰서 바꿔줘-->
+                <div class="visual"><img src="수업소개.jpg" alt=""></div><!--show뒤에 숫자 각자 파트에 맞춰서 바꿔줘-->
                 <!--<서원>홈화면:1 교가:2 지도:3 <문용>수업소개:4 공지사항:5 <주영>교수진소개:6 기숙사소개:7 <희진>학부미리보기:8-->
         </header>
         <main>
