--- a/dormitoryAssignment.html
+++ b/dormitoryAssignment.html
@@ -6,9 +6,6 @@
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/default.css">
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> <!--http://bonozoa.dothome.co.kr/HogwartsSchool.css-->
         <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
-        <script>
-            alert('귀하는 열람 자격이 없습니다!!');
-        </script>
         <style>
             a.go_to_top{
                 position: fixed;
@@ -33,6 +30,7 @@
                 width: 30px;
                 padding-bottom: 10px;
             }
+
             #footer{
             margin-top: 50px;
             height: 80px;
@@ -125,11 +123,7 @@
         <main>
             <h1>공지 사항</h1>
             <div>
-                <br>
-                <br>
-                <img src="닫힌양피지.png">
-                <br>
-                <br>
+                <img src="dormitoryAssignment.png">
             </div>
         </main>
         <div id="footer">
