--- a/preparationForFreshmen.html
+++ b/preparationForFreshmen.html
@@ -6,9 +6,6 @@
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/default.css">
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> <!--http://bonozoa.dothome.co.kr/HogwartsSchool.css-->
         <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
-        <script>
-            alert('귀하는 열람 자격이 없습니다!!');
-        </script>
         <style>
             a.go_to_top{
                 position: fixed;
@@ -119,17 +116,13 @@
                 <div class="visual"><img src="공지사항배경.jpg" alt=""></div><!--show뒤에 숫자 각자 파트에 맞춰서 바꿔줘-->
                 <!--<서원>홈화면:1 교가:2 지도:3 <문용>수업소개:4 공지사항:5 <주영>교수진소개:6 기숙사소개:7 <희진>학부미리보기:8-->
         </header>
-            <a href="#top_of_top" class="go_to_top">
-                <img src="http://shinheejin.dothome.co.kr/images/arrow.png"/> 
-            </a>
+        <a href="#top_of_top" class="go_to_top">
+            <img src="http://shinheejin.dothome.co.kr/images/arrow.png"/> 
+        </a>
         <main>
             <h1>공지 사항</h1>
             <div>
-                <br>
-                <br>
-                <img src="닫힌양피지.png">
-                <br>
-                <br>
+                <img src="preparationForFreshmen.png">
             </div>
         </main>
         <div id="footer">
