--- a/Notice.html
+++ b/Notice.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/default.css">
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> <!--http://bonozoa.dothome.co.kr/HogwartsSchool.css-->
         <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
+        <script src='http://dltk456.dothome.co.kr//Hogwarts/tinkerbellMouseEffect.js'></script>
+
         <style>
             a.go_to_top{
                 position: fixed;
@@ -172,7 +174,7 @@
                     <li><a href="http://dltk456.dothome.co.kr//Hogwarts/preparationForFreshmen.html">2021학년도 신입생 준비물 [필독]</a><span>2021-02-28</span></li>           
                     <li><a href="http://dltk456.dothome.co.kr//Hogwarts/invitationLectureForGraduates.html">졸업생 초청 강연 - 해리 제임스 포터 </a><span>2021-01-24</span></li>
                     <li><a href="http://dltk456.dothome.co.kr//Hogwarts/dormitoryAssignment.html">기숙사 배정 관련 공지사항</a><span>2021-01-13</span></li>
-                    <li><a href="http://dltk456.dothome.co.kr//Hogwarts/Loading.html">신입생 오리엔테이션 자료 (5일부터 열람 가능)</a><span>2021-01-08</span></li>
+                    <li><a href="http://dltk456.dothome.co.kr//Hogwarts/newspaper.html">HOGWARTS 학교 신문</a><span>2021-01-08</span></li>
                     <li><a href="http://dltk456.dothome.co.kr//Hogwarts/Loading.html">신입생 멘토링 프로그램 멘토 모집</a><span>2020-12-24</span></li>
                     <li><a href="http://dltk456.dothome.co.kr//Hogwarts/Loading.html">퀴디치 선수 모집 (2학년 이상 지원 가능)</a><span>2021-11-18</span></li>
                     <li><a href="http://dltk456.dothome.co.kr//Hogwarts/Loading.html">약초학 연구실 연구조교 모집</a><span>2020-10-09</span></li>
@@ -197,7 +199,7 @@
                     <a href="http://bonozoa.dothome.co.kr/HogwartsSchool.html"><img  src="http://shinheejin.dothome.co.kr/images/social/logo.png" /></a>
                 </div>
                 <div class="middle-word">
-                    <a>호그와트 급행열차 세인트 판크라스역 9와 3/4 승강장</a>
+                    <a>호그와트 급행열차 킹스크로스역 9와 3/4 승강장</a>
                     <br>
                     <a>COPYRIGHT© 2021 HOGWARTS SCHOOL. ALL RIGHTS RESERVED.</a>
                 </div>
