--- a/Loading.html
+++ b/Loading.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/default.css">
         <link rel="stylesheet" type="text/css" href="http://bonozoa.dothome.co.kr/HogwartsSchool.css"> <!--http://bonozoa.dothome.co.kr/HogwartsSchool.css-->
         <script type="text/javascript" src="http://bonozoa.dothome.co.kr/HogwartsSchool.js"></script>
+        <script src='http://dltk456.dothome.co.kr//Hogwarts/tinkerbellMouseEffect.js'></script>
+
         <script>
             alert('귀하는 열람 자격이 없습니다!!');
         </script>
@@ -138,7 +140,7 @@
                     <a href="http://bonozoa.dothome.co.kr/HogwartsSchool.html"><img  src="http://shinheejin.dothome.co.kr/images/social/logo.png" /></a>
                 </div>
                 <div class="middle-word">
-                    <a>호그와트 급행열차 세인트 판크라스역 9와 3/4 승강장</a>
+                    <a>호그와트 급행열차 킹스크로스역 9와 3/4 승강장</a>
                     <br>
                     <a>COPYRIGHT© 2021 HOGWARTS SCHOOL. ALL RIGHTS RESERVED.</a>
                 </div>
